# zephyr-demo

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Kconfig  README.md  VERSION  config-tls-mender.h  prj.conf  sample.yaml  sysbuild-mcuboot.conf  west.yml
.github/workflows/: check_code_format.sh  check_equivalence_tests.sh  check_headers.sh  check_include_guards.sh  ci.yml  do_code_format.sh
boards/: esp32s3_devkitc_procpu.conf  esp32s3_devkitc_procpu.overlay
src/: main.c
src/network/: CMakeLists.txt
src/network/wifi/: CMakeLists.txt
src/network/wifi/src/: wifi_agent.c  wifi_agent.h
src/ota/: CMakeLists.txt
src/ota/src/: ota_agent.c  ota_agent.h
src/ui/: CMakeLists.txt
src/ui/src/: led.c  led.h
sysbuild/: CMakeLists.txt  mcuboot.conf
